Fix strange spacing between sort component and content list

--- a/src/scripts/Components/List/List.scss
+++ b/src/scripts/Components/List/List.scss
@@ -1,4 +1,6 @@
 .h5p-hub-list {
+  overflow: auto;
+
   &:before {
     content: " ";
     width: 100%;
